--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 testpaths = kglm/tests/
 pythonpath = ./
+log_format = %(asctime)s - %(levelname)s - %(name)s - %(message)s
+log_level = DEBUG
